# PAK-KTM

./: PAKKTM.sln  PAKT.sln  README.md
Examples/: pak.lst
Examples/Example-Liver/: Liver.docx
Examples/Example-PLGA/: PLGA.docx
Examples/Example-Pancreas/: Pancreas.docx
LINUX VERSION/pakktm/: CMakeLists.txt
LINUX VERSION/pakktm/src/pak/: Mumps.for  PAK00T.FOR  PAK01T.FOR  PAK02T.FOR  PAK11T.FOR  PAK21T.FOR  PAK31T.FOR
LINUX VERSION/pakktm/src/sparse_assembler/: redblack_t.h  sparse_assembler.c
MUMPS_Win_C/: MUMPS_Win_C.vcproj  MUMPS_Win_C.vcxproj  MUMPS_Win_C.vcxproj.filters
MUMPS_Win_F/: MUMPS_Win_F.vfproj
PakKTM/: MESSAGES.LST  PAKKTM.vfproj  fort.3  pakt.lst  pakt.unv
PakKTM/Source/: Mumps.for  PAK00KTM.FOR  PAK01KTM.FOR  PAK02KTM.FOR  PAK03KTM.FOR  PAK11KTM.FOR  PAK21KTM.FOR  PAK31KTM.FOR
PakT/: PAKKTM.vfproj  pakt.lst
PakT/Source/: Mumps.for  PAK00T.FOR  PAK01T.FOR  PAK02T.FOR  PAK03T.FOR  PAK11T.FOR  PAK21T.FOR  PAK31T.FOR
SparseAssembler/: SparseAssembler.vcproj  SparseAssembler.vcxproj  sparse_assembler.c
